@@ -1440,9 +1440,8 @@ displayed in the 3D view window.
 \begin{description}
 \item[\menutwo{3D Render}{Change Background}] Prompts for a colour to
   set the background colour of the 3D window and slice window.
-\item[\menutwo{3D Render}{Mode: Wireframe or Shaded}] Toggles the
-  display mode of the current model between a wireframe rendering and
-  a solid, shaded rendering. The default is shaded.
+\item[\menutwo{3D Render}{Mode: Shaded}] Toggles the
+  display mode of the current model between a wireframe rendering, point rendering, shaded (solid) rendering, and wireframe overlay (wireframe superimposed on shaded). The default is shaded rendering.
 \item[\menutwo{3D Render}{Shading: Gouraud or Flat}] Toggles the
   display mode of the current object between a flat or smooth shading.
   The default is smooth (Gouraud).
